...
            "state" : "translated",
            "value" : "關閉人口圖例"
          }
        }
      }
    },
    "Automatic physical path" : {
      "localizations": {
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "自動選擇股道與月台"
          }
...
            "state" : "translated",
            "value" : "經濟流水"
          }
        }
      }
    },
    "Lines" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "路線"
          }
...
            "state" : "translated",
            "value" : "停站模式仍停靠清單中相同位置的站。等候路線不再提供之行程的乘客會離開。"
          }
        }
      }
    },
    "Pause" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "暫停"
          }
...
